marketplace/ui/src/components/MarketPlace/index.css
/* ... */
@media (min-width: 769px) and (max-width: 834px) {
  .staking_banner_text {
    font-size: 44px;
    left: 7%;
    top: -15%;
    /* line-height: 22px; */
  }

  .staking_banner_text > h1:nth-child(3){
    line-height: 28px;
  }

  .stake-banner-stats{
    top: -20px !important;
    left: -60px;
  }

  .stake-banner-stats-title{
    font-size: 12px;
  }

  .stake-banner-stats-value{
    font-size: 24px;
  }

}
@media (min-width: 835px) and (max-width: 999px) {
  .staking_banner_text {
    font-size: 44px;
    left: 7%;
    top: -15%;
  }

  .staking_banner_text > h1:nth-child(3){
    line-height: 32px;
  }

  .stake-banner-stats{
    top: -20px !important;
    left: -60px;
  }
}

@media (min-width: 769px) and (max-width: 999px) {
  .collectible_banner_text {
    width: 360px;
    font-size: 40px;
    left: 7%;
    top: 10%;
    line-height: 42px;
  }

  /* .staking_banner_text {
    font-size: 44px;
    left: 7%;
    top: -5%;
    line-height: 42px;
  } */

  .clothing_banner_text {
    width: 360px;
    font-size: 44px;
    left: 7%;
    top: 8%;
    line-height: 42px;
  }

  .metal_banner_text {
    width: 400px;
    font-size: 44px;
    left: 7%;
    top: 15%;
    line-height: 42px;
  }

  .liquid_gold_text_box {
    top: 8%;
    margin-left: 7%;
  }

  .liquid_gold_text_box > h1:first-child {
    font-size: 48px;
  }

  .liquid_gold_text_box > h1:last-child {
    font-size: 30px;
  }

  .token_banner_text_box {
    top: 5%;
    left: 6%;
    width: 80%;
  }

  .token_banner_text1 {
    width: 100%;
    font-size: 20px;
  }

  .token_banner_text2 {
    width: 450px;
    font-size: 48px;
    margin-top: 20px;
    line-height: 52px;
  }

  .how_banner_text_box {
    top: 15%;
    left: 2%;
    font-size: 28px;
    font-weight: 900;
  }

  .banner-block-container {
    margin-top: 30px;
    width: 90%;
    margin-left: 0%;
  }

  .banner-block {
    width: 90px;
    height: 90px;
    border-radius: 0px 24px 0px 0px;
    padding: 10px;
    text-align: left;
  }

  .banner-step {
    font-size: 6px;
    color: #c2c0c0;
    margin-top: 10px;
    font-weight: 700;
    font-family: 'Bricolage Grotesque', sans-serif !important;
  }

  .banner-step-description {
    font-size: 7px;
    color: #2e51cd;
    margin-top: 5px;
    font-weight: 600;
    font-family: 'Bricolage Grotesque', sans-serif !important;
  }

  .banner-icons {
    width: 14px !important;
    height: 14px;
  }

  .banner-arrow {
    width: 12px !important;
    height: 12px !important;
  }

  .rwa-class {
    width: 55px;
  }

  .product-detail-swiper {
    max-width: 500px;
  }
}

@media (min-width: 600px) and (max-width: 768px) {
  .collectible_banner_text {
    width: 300px;
    font-size: 40px;
    left: 7%;
    top: 10%;
    line-height: 44px;
  }

  .stake-banner-stats{
    top: -15px;
    left: -10px !important;
    width: 66% !important;
  }

  .stake-banner-stats-title{
    font-size: 12px;
  }

  .stake-banner-stats-value{
    font-size: 24px;
  }

  .staking_banner_text {
    font-size: 28px;
    left: 7%;
    top: -10%;
  }

  .staking_banner_text > h1:nth-child(3){
    line-height: 28px;
  }

  .staking_banner_text > .title {
    font-size: 2.5rem;
    font-weight: bold;
  }

  .clothing_banner_text {
    width: 400px;
    font-size: 40px;
    left: 7%;
    top: 10%;
    line-height: 44px;
  }

  .metal_banner_text {
    width: 320px;
    font-size: 40px;
    left: 7%;
    top: 10%;
    line-height: 44px;
  }

  .liquid_gold_text_box {
    top: 7%;
    margin-left: 7%;
  }

  .liquid_gold_text_box > h1:first-child {
    font-size: 48px;
  }

  .liquid_gold_text_box > h1:last-child {
    font-size: 30px;
  }

  .token_banner_text_box {
    top: 10%;
    left: 8%;
    width: 80%;
  }

  .token_banner_text1 {
    width: 100%;
    font-size: 20px;
  }

  .token_banner_text2 {
    width: 300px;
    font-size: 30px;
    margin-top: 20px;
    line-height: 36px;
  }

  .how_banner_text_box {
    top: 10px;
    left: 2%;
    font-size: 48px;
    font-weight: 900;
  }

  .banner-block-container {
    margin-top: 20px;
    width: 90%;
    margin-left: 1%;
  }

  .banner-block {
    width: 90px;
    height: 90px;
    border-radius: 0px 24px 0px 0px;
    padding: 10px;
    text-align: left;
  }

  .banner-step {
    font-size: 6px;
    color: #c2c0c0;
    margin-top: 10px;
    font-weight: 700;
    font-family: 'Bricolage Grotesque', sans-serif !important;
  }

  .banner-step-description {
    font-size: 7px;
    color: #2e51cd;
    margin-top: 5px;
    font-weight: 600;
    font-family: 'Bricolage Grotesque', sans-serif !important;
  }

  .banner-icons {
    width: 14px !important;
    height: 14px;
  }

  .banner-arrow {
    width: 12px !important;
    height: 12px !important;
  }

  .rwa-class {
    width: 55px;
  }

  .product-detail-swiper {
    max-width: 600px;
  }
}
/* ... */

